# supervison

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  lychee.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-package.yml  ci-build-docs.yml  ci-check-links.yml  ci-tests.yml  clear-cache.yml  pr-conflict-labeler.yml  publish-docs.yml  publish-pre-release.yml  publish-release.yml  publish-testpypi.yml  test-doc.yml  uv-test.yml
docs/: changelog.md  deprecated.md  index.md
docs/detection/: annotators.md
docs/how_to/: count_in_zone.md  detect_and_annotate.md  detect_small_objects.md  process_datasets.md  save_detections.md  track_objects.md
examples/: README.md
examples/compact_mask/: README.md  benchmark.py
examples/count_people_in_zone/: README.md
examples/heatmap_and_track/: README.md
examples/image_object_counter_ui/: .camera_config.json  .folder_ui_config.json  .gitignore  README.md  app.py  camera_thresholds.example.json  camera_thresholds.generated.json  folder_service.py  requirements.txt  scratch_replace.py  supabase_schema.sql  ui_components.py
examples/speed_estimation/: README.md
examples/time_in_zone/: README.md  inference_file_example.py  inference_naive_stream_example.py  inference_stream_example.py  requirements.txt  ultralytics_stream_example.py
examples/time_in_zone/scripts/: download_from_youtube.py  stream_from_file.py
examples/tracking/: README.md
examples/traffic_analysis/: README.md
src/supervision/: __init__.py
src/supervision/annotators/: core.py  utils.py
src/supervision/assets/: downloader.py
src/supervision/classification/: core.py
src/supervision/dataset/: core.py  utils.py
src/supervision/dataset/formats/: coco.py  pascal_voc.py  yolo.py
src/supervision/detection/: compact_mask.py  core.py  vlm.py
src/supervision/detection/tools/: csv_sink.py  json_sink.py  polygon_zone.py  smoother.py
src/supervision/detection/utils/: boxes.py  converters.py  internal.py  iou_and_nms.py  masks.py  polygons.py  vlms.py
src/supervision/draw/: color.py  utils.py
src/supervision/geometry/: core.py  utils.py
src/supervision/key_points/: annotators.py  core.py
src/supervision/metrics/: detection.py  f1_score.py  mean_average_precision.py  mean_average_recall.py  precision.py  recall.py
src/supervision/metrics/utils/: object_size.py
src/supervision/tracker/byte_tracker/: core.py  single_object_track.py
src/supervision/utils/: conversion.py  file.py  image.py  internal.py  iterables.py  logger.py  notebook.py  video.py
src/supervision/validators/: __init__.py
supervision/annotators/: core.py  utils.py
supervision/assets/: downloader.py  list.py
supervision/dataset/: utils.py
supervision/dataset/formats/: yolo.py
supervision/detection/: core.py  line_zone.py
supervision/detection/tools/: csv_sink.py
supervision/detection/utils/: converters.py  iou_and_nms.py  vlms.py
supervision/draw/: color.py  utils.py
supervision/geometry/: utils.py
supervision/key_points/: annotators.py  core.py
supervision/keypoint/: __init__.py  annotators.py  core.py
supervision/metrics/: detection.py  f1_score.py  mean_average_precision.py  mean_average_recall.py  precision.py  recall.py
supervision/metrics/utils/: utils.py
supervision/tracker/byte_tracker/: core.py
supervision/utils/: file.py  image.py  internal.py  iterables.py  notebook.py  video.py
supervision/validators/: __init__.py
test/: conftest.py  helpers.py  test_utils.py
test/annotators/: test_core.py  test_utils.py
test/assets/: test_downloader.py
test/classification/: test_core.py
test/dataset/: test_core.py  test_utils.py
test/dataset/formats/: test_coco.py  test_pascal_voc.py  test_yolo.py
test/detection/: test_core.py  test_csv.py  test_from_adapters.py  test_json.py  test_line_counter.py  test_polygonzone.py  test_vlm.py
test/detection/utils/: test_iou_and_nms.py  test_masks.py
test/geometry/: test_core.py
test/key_points/: test_annotators.py  test_core.py
test/metrics/: test_detection.py  test_f1_score.py  test_precision.py  test_recall.py
test/utils/: test_file.py  test_video.py
tests/: helpers.py
tests/annotators/: test_core.py  test_utils.py
tests/assets/: test_downloader.py  test_list.py
tests/classification/: test_core.py
tests/dataset/: test_core.py  test_utils.py
tests/dataset/formats/: test_coco.py  test_pascal_voc.py  test_yolo.py
tests/detection/: test_compact_mask.py  test_core.py  test_csv.py  test_from_sam.py  test_json.py  test_line_counter.py  test_polygonzone.py
tests/detection/utils/: test_converters.py  test_internal.py  test_iou_and_nms.py
tests/draw/: test_color.py
tests/examples/: test_folder_service.py
tests/geometry/: test_utils.py
tests/key_points/: test_annotators.py  test_core.py
tests/metrics/: conftest.py  test_detection.py  test_f1_score.py  test_mean_average_recall.py  test_recall.py
tests/tracker/: test_byte_tracker.py
tests/utils/: test_file.py  test_internal.py  test_video.py
